Small fixed: scrollbar for chrome and position of the rating.

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -24,3 +24,21 @@ body {
         position: relative;
     }
 }
+
+// Стиль для скролла
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #444;
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #333;
+}
